added tests by gw:gw and fixes by gw:act sonar-fix.