@@ -8,6 +8,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collections;
 import java.util.List;
@@ -58,7 +59,8 @@ class ClaudeProviderTest {
 	void addFile_url_shouldThrowUnsupportedOperationException_withExpectedMessage() throws Exception {
 		// Arrange
 		ClaudeProvider provider = new ClaudeProvider();
-		URL url = new URL("file:some-file.txt");
+		// Sonar java:S1874 - URL is deprecated; build via URI and convert only when needed.
+		URL url = URI.create("file:some-file.txt").toURL();
 
 		// Act
 		UnsupportedOperationException ex = assertThrows(UnsupportedOperationException.class, () -> provider.addFile(url));
